Update package contributors

--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     },
     {
       "name": "Étienne Ponton-Bouchard"
+    },
+    {
+      "name": "Özgür Özbek"
+    },
+    {
+      "name": "BS893"
     }
   ],
   "license": "MIT",
