--- a/src/tables/teotheknowledge.json
+++ b/src/tables/teotheknowledge.json
@@ -1,9 +1,9 @@
 [
-  { "w": 9, "v": "Lcaoc" },
-  { "w": 7, "v": "Boghradyn" },
-  { "w": 7, "v": "Yr'snn" },
-  { "w": 5, "v": "Tsahnrad" },
-  { "w": 3, "v": "Ayrugcumoak" },
-  { "w": 3, "v": "Wugv" },
-  { "w": 1, "v": "Anomenada" }
+  { "w": 9, "v": "{$god=Lcaoc}{%lawful+2}{%good+2}{$goddescr=, God of wit, civilization. Right side of Mceeju. Undisputed lord of the Outer Planes. (Lawful Good)}" },
+  { "w": 7, "v": "{$god=Boghradyn}{%lawful+3}{%good+2}{$goddescr=, The allfather god of the Dwarves. (Lawful Good)}" },
+  { "w": 7, "v": "{$god=Yr'snn}{%lawful+2}{%good+2}{$goddescr=, Creator of Elves and patron of all things in elf values. (Lawful Good)}" },
+  { "w": 5, "v": "{$god=Tsahnrad}{%lawful+2}{%good+2}{$goddescr=, God of crafting. (Lawful Good)}" },
+  { "w": 3, "v": "{$god=Ayrugcumoak}{%chaotic+1}{%good+3}{$goddescr=, Goddess of knowledge, also referenced as The Eye, Eye of Knowledge and many others. (Chaotic Good)}" },
+  { "w": 3, "v": "{$god=Wugv}{%chaotic+1}{%moralneutral+3}{$goddescr=, Goddess of numbers, also known as Xoypoh. (Chaotic Neutral)}" },
+  { "w": 1, "v": "{$god=Anomenada}{%lawful+2}{%moralneutral+1}{$goddescr=, Demigoddess of alchemy. (Lawful Neutral)}" }
 ]
