--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "npc-generator",
-  "version": "1.0.2",
-  "description": "Generator of randomized Non-Player Characters (NPCs) with attributes, in-depth and unique descriptions as well as a plot hook",
+  "name": "npc-generator-teothe",
+  "version": "1.1.0",
+  "description": "Generator of randomized Non-Player Characters (NPCs) with attributes, in-depth and unique descriptions as well as a plot hook. Specifically curated for the Teothe campaign setting",
   "keywords": [
     "npc",
     "generator"
   ],
-  "homepage": "https://www.npcgenerator.com",
+  "homepage": "https://teothe.com/generators/quick-npc",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Cellule/npc-generator.git"
+    "url": "https://github.com/ozgurozbek/npc-generator.git"
   },
   "contributors": [
     {
