Update package.json repository to use teothe branch

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "homepage": "https://teothe.com/generators/quick-npc",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ozgurozbek/npc-generator.git"
+    "url": "https://github.com/ozgurozbek/npc-generator#teothe.git"
   },
   "contributors": [
     {
